--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="./icon.png" sizes="96x96" type="image/png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="<%= BASE_URL %>/icon.png">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Refun Garantee</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   </head>
