--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <link rel="icon" href="./icon.png" sizes="96x96" type="image/png">
+    <link rel="icon" href="./icon.png" type="image/png">
+    <title>Refun Garantee</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="<%= BASE_URL %>/icon.png">
-    <title>Refun Garantee</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   </head>
   <body class="bg-darkteme">
